added castle photo

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Welcome to Guimarães</title>
+    <title>Welcome to Edimburgh</title>
   </head>
   <body>
     <header>
-      <h1>Welcome to Guimarães</h1>
+      <h1>Welcome to Edimburgh</h1>
     </header>
   </body>
 </html>
