--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
     <header>
       <h1>Welcome to Edimburgh</h1>
     </header>
+
+    <footer>
+      <p>
+        This prject was coded by Sofia Pastor and is
+        <a href="https://github.com/sofia-pastor/travel-project" target="_blank"
+          >open sourced</a
+        >
+        .
+      </p>
+    </footer>
   </body>
 </html>
