added h2 content and style

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <body>
     <header>
       <h1>Welcome to Edimburgh</h1>
+      <h2>Capital city of Portugal</h2>
     </header>
 
     <footer>
       <p>
-        This prject was coded by Sofia Pastor and is
+        This project was coded by Sofia Pastor and is
         <a href="https://github.com/sofia-pastor/travel-project" target="_blank"
           >open sourced</a
         >
