--- a/index.html
+++ b/index.html
@@ -13,19 +13,24 @@
     <title>Welcome to Edimburgh</title>
   </head>
   <body>
-    <header>
-      <h1>Welcome to Edimburgh</h1>
-      <h2>Capital city of Portugal</h2>
-    </header>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Edimburgh</h1>
+        <h2>Capital city of Scotland</h2>
+        <a href="more">Learn more</a>
+      </header>
 
-    <footer>
-      <p>
-        This project was coded by Sofia Pastor and is
-        <a href="https://github.com/sofia-pastor/travel-project" target="_blank"
-          >open sourced</a
-        >
-        .
-      </p>
-    </footer>
+      <footer>
+        <p>
+          This project was coded by Sofia Pastor and is
+          <a
+            href="https://github.com/sofia-pastor/travel-project"
+            target="_blank"
+            >open sourced</a
+          >.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
