started footer and added background img to it

--- a/index.html
+++ b/index.html
@@ -20,17 +20,52 @@
         <h2>Capital city of Scotland</h2>
         <a href="more">Learn more</a>
       </header>
-
-      <footer>
-        <p>
-          This project was coded by Sofia Pastor and is
-          <a
-            href="https://github.com/sofia-pastor/travel-project"
-            target="_blank"
-            >open sourced</a
-          >.
-        </p>
-      </footer>
     </div>
+    <footer>
+      <div class="container">
+        <div>
+          <h4>More about Edimburgh</h4>
+          <ul>
+            <li>
+              <a href="https://www.edinburghairport.com/" target="_blank"
+                >Edimburgh Airport website</a
+              >
+            </li>
+            <li>
+              <a href="https://www.introducingedinburgh.com/map" target="_blank"
+                >Map of Edimburgh</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://edinburghtrams.com/plan-journey/route-maps-stops"
+                target="_blank"
+                >Public transport map</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h4>About me</h4>
+          <p>
+            Hi! My name is Sofia and I'm an aspiring developer. I created this
+            page as part of a project for SheCodes Responsive to develop my
+            coding skills.
+          </p>
+        </div>
+        <div>
+          <h4>About this website</h4>
+          <p>
+            I created this page as part of a project for SheCodes Responsive to
+            develop my coding skills and is
+            <a
+              href="https://github.com/sofia-pastor/travel-project"
+              target="_blank"
+              >open sourced</a
+            >.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
