added grid to footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </header>
     </div>
     <footer>
-      <div class="container">
+      <section class="grid">
         <div>
           <h4>More about Edimburgh</h4>
           <ul>
@@ -48,16 +48,15 @@
         <div>
           <h4>About me</h4>
           <p>
-            Hi! My name is Sofia and I'm an aspiring developer. I created this
-            page as part of a project for SheCodes Responsive to develop my
-            coding skills.
+            Hi! My name is Sofia and I'm a portuguese aspiring developer. I
+            created this page as part of a project for SheCodes Responsive to
+            develop my coding skills.
           </p>
         </div>
         <div>
           <h4>About this website</h4>
           <p>
-            I created this page as part of a project for SheCodes Responsive to
-            develop my coding skills and is
+            This project was coded by me as part and is
             <a
               href="https://github.com/sofia-pastor/travel-project"
               target="_blank"
@@ -65,7 +64,7 @@
             >.
           </p>
         </div>
-      </div>
+      </section>
     </footer>
   </body>
 </html>
