--- a/index.html
+++ b/index.html
@@ -15,56 +15,89 @@
   <body>
     <div class="container">
       <header>
-        <h3>.TRAVEL.</h3>
+        <h3>.Travel.</h3>
         <h1>Welcome to Edimburgh</h1>
         <h2>Capital city of Scotland</h2>
         <a href="more">Learn more</a>
       </header>
-    </div>
-    <footer>
-      <section class="grid">
-        <div>
-          <h4>More about Edimburgh</h4>
-          <ul>
-            <li>
-              <a href="https://www.edinburghairport.com/" target="_blank"
-                >Edimburgh Airport website</a
-              >
-            </li>
-            <li>
-              <a href="https://www.introducingedinburgh.com/map" target="_blank"
-                >Map of Edimburgh</a
-              >
-            </li>
-            <li>
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img
+              src="src/images/Edinburgh-0135.jpg"
+              alt="Edimburgh view"
+              class="img-responsive edimburgh-img"
+            />
+          </div>
+          <div>
+            <h3>Why Edimburgh?</h3>
+            <h2>Edinburgh, where the magic of Harry Potter was born</h2>
+            <p>
+              Edinburgh, the jewel of Scotland's heritage and culture, is a city
+              where history and modernity intertwine. The city’s rich history is
+              visible in landmarks, from the ancient Edinburgh Castle perched
+              atop Castle Rock to the cobbled streets of the Royal Mile.
+            </p>
+            <p>
+              Additionally, Edinburgh holds a special place in the hearts of
+              Harry Potter fans, as J.K. Rowling wrote much of the series in
+              local cafés, drawing inspiration from sites like George Heriot's
+              School and Greyfriars Kirkyard.
+            </p>
+            <p>
+              This blend of past and present, reality and imagination, makes
+              Edinburgh a truly enchanting destination.
+            </p>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <section class="grid grid-3-columns-w-first-narrow">
+          <div>
+            <h4>More about Edimburgh</h4>
+            <ul>
+              <li>
+                <a href="https://www.edinburghairport.com/" target="_blank"
+                  >Edimburgh Airport website</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.introducingedinburgh.com/map"
+                  target="_blank"
+                  >Map of Edimburgh</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://edinburghtrams.com/plan-journey/route-maps-stops"
+                  target="_blank"
+                  >Public transport map</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h4>About me</h4>
+            <p>
+              Hi! My name is Sofia and I'm a portuguese aspiring developer. I
+              created this page as part of a project for SheCodes Responsive to
+              develop my coding skills.
+            </p>
+          </div>
+          <div>
+            <h4>About this website</h4>
+            <p>
+              This project was coded by me as part and is
               <a
-                href="https://edinburghtrams.com/plan-journey/route-maps-stops"
+                href="https://github.com/sofia-pastor/travel-project"
                 target="_blank"
-                >Public transport map</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h4>About me</h4>
-          <p>
-            Hi! My name is Sofia and I'm a portuguese aspiring developer. I
-            created this page as part of a project for SheCodes Responsive to
-            develop my coding skills.
-          </p>
-        </div>
-        <div>
-          <h4>About this website</h4>
-          <p>
-            This project was coded by me as part and is
-            <a
-              href="https://github.com/sofia-pastor/travel-project"
-              target="_blank"
-              >open sourced</a
-            >.
-          </p>
-        </div>
-      </section>
-    </footer>
+                >open sourced</a
+              >.
+            </p>
+          </div>
+        </section>
+      </footer>
+    </div>
   </body>
 </html>
