added cards grid

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <div class="container">
       <header>
         <h3>.Travel.</h3>
-        <h1>Welcome to Edimburgh</h1>
+        <h1>Welcome to Edinburgh</h1>
         <h2>Capital city of Scotland</h2>
         <a href="more">Learn more</a>
       </header>
       <main>
-        <section class="grid grid-2-columns">
+        <section class="grid grid-2-columns first-section">
           <div>
             <img
               src="src/images/Edinburgh-0135.jpg"
@@ -30,7 +30,7 @@
             />
           </div>
           <div>
-            <h3>Why Edimburgh?</h3>
+            <h3>Why Edinburgh?</h3>
             <h2>Edinburgh, where the magic of Harry Potter was born</h2>
             <p>
               Edinburgh, the jewel of Scotland's heritage and culture, is a city
@@ -50,6 +50,115 @@
             </p>
           </div>
         </section>
+        <section class="second-section">
+          <h3>Attractions</h3>
+          <h2>Top attractions in Edinburgh</h2>
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="src/images/Edimburgh-castle.JPG"
+                  alt="Edinburgh Castle"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Edinburgh Castle</h4>
+                <p>
+                  Discover the history and majesty of Edinburgh Castle, perched
+                  on Castle Rock. Explore its ancient halls, the Crown Jewels,
+                  and the Stone of Destiny.
+                </p>
+                <h5>Adress:</h5>
+                <p>Castlehill, Edinburgh EH1 2NG</p>
+                <h5>Why Visit:</h5>
+                <p>
+                  It offers a deep dive into Scotland’s rich history and
+                  provides stunning panoramic views of the city from its
+                  elevated position. Its historical exhibits and breathtaking
+                  architecture make it a must-see attraction.
+                </p>
+                <div class="card-footer">
+                  <a
+                    href="https://www.edinburghcastle.scot/"
+                    target="_blank"
+                    class="btn"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="src/images/old-town-Edinburgh.jpg"
+                  alt="Edinburgh old town"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>The Royal Mile</h4>
+                <p>
+                  Walk down the historic Royal Mile in Edinburgh's Old Town,
+                  connecting Edinburgh Castle to Holyrood Palace. Enjoy the
+                  charming shops, street performers, and historic sites along
+                  the way.
+                </p>
+                <h5>Adress:</h5>
+                <p>The Royal Mile, Edinburgh EH1</p>
+                <h5>Why Visit:</h5>
+                <p>
+                  It is the heart of Edinburgh’s Old Town, filled with vibrant
+                  street life and centuries-old history. The lively atmosphere,
+                  combined with unique shops and historic landmarks, makes every
+                  visit a memorable experience.
+                </p>
+                <div class="card-footer">
+                  <a
+                    href="https://edinburgh.org/neighbourhoods/the-royal-mile/"
+                    class="btn"
+                    target="_blank"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="src/images/athur's-seat-Edinburgh.jpg"
+                  alt="Arthur's seat"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Arthur's Seat</h4>
+                <p>
+                  Hike up Arthur's Seat, an ancient volcano and the highest
+                  point in Holyrood Park. Enjoy breathtaking panoramic views of
+                  the city and beyond.
+                </p>
+                <h5>Adress:</h5>
+                <p>Queen's Dr, Edinburgh EH8 8HG</p>
+                <h5>Why Visit:</h5>
+                <p>
+                  It offers a perfect escape into nature right in the middle of
+                  the city. The climb is rewarding, with spectacular views that
+                  make you feel on top of the world, offering a unique
+                  perspective of Edinburgh’s landscape.
+                </p>
+                <div class="card-footer">
+                  <a
+                    href="https://www.visitscotland.com/info/see-do/holyrood-park-and-arthurs-seat-p914341"
+                    class="btn"
+                    target="_blank"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer>
         <section class="grid grid-3-columns-w-first-narrow">
@@ -58,14 +167,14 @@
             <ul>
               <li>
                 <a href="https://www.edinburghairport.com/" target="_blank"
-                  >Edimburgh Airport website</a
+                  >Edinburgh Airport website</a
                 >
               </li>
               <li>
                 <a
                   href="https://www.introducingedinburgh.com/map"
                   target="_blank"
-                  >Map of Edimburgh</a
+                  >Map of Edinburgh</a
                 >
               </li>
               <li>
