added responsive google maps embed

--- a/index.html
+++ b/index.html
@@ -55,12 +55,20 @@
           <h2>Top attractions in Edinburgh</h2>
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="src/images/Edimburgh-castle.JPG"
                   alt="Edinburgh Castle"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4468.089687037756!2d-3.2047951228132425!3d55.94859467315732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887c79a2099c0f7%3A0x469a1eebe54c0a58!2sCastelo%20de%20Edimburgo!5e0!3m2!1spt-PT!2spt!4v1731342880594!5m2!1spt-PT!2spt"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="embed"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Edinburgh Castle</h4>
@@ -89,12 +97,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="src/images/old-town-Edinburgh.jpg"
                   alt="Edinburgh old town"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6318.571058921089!2d-3.1956950980596206!3d55.95020001712388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887c785f515e389%3A0x364ad16cf392cb1e!2sRoyal%20Mile!5e0!3m2!1spt-PT!2spt!4v1731345059962!5m2!1spt-PT!2spt"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="embed"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>The Royal Mile</h4>
@@ -124,12 +140,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="src/images/athur's-seat-Edinburgh.jpg"
                   alt="Arthur's seat"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.2208884601!2d-3.172132123967451!3d55.944081570487306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887b884112f22b9%3A0x218a466c41934cf0!2sArthur&#39;s%20Seat!5e0!3m2!1spt-PT!2spt!4v1731345278872!5m2!1spt-PT!2spt"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="embed"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Arthur's Seat</h4>
