added photos section

--- a/index.html
+++ b/index.html
@@ -183,6 +183,43 @@
             </div>
           </div>
         </section>
+        <section class="photos-section">
+          <div class="photos-header">
+            <h3>Gallery</h3>
+            <h2>My photos from Edinburgh</h2>
+          </div>
+          <div class="grid grid-3-columns">
+            <img
+              src="src/images/old-town-Edinburgh.jpg"
+              alt="Old Town"
+              class="img-responsive"
+            />
+            <img
+              src="src/images/athur's-seat-Edinburgh.jpg"
+              alt="Arthur's Seat"
+              class="img-responsive"
+            /><img
+              src="src/images/3f6e9d94-0bfc-4750-b239-c6c2840e29f4.jpg"
+              alt="Edimburgh view"
+              class="img-responsive"
+            />
+            <img
+              src="src/images/20230717_145644.jpg"
+              alt="Edimburgh"
+              class="img-responsive"
+            />
+            <img
+              src="src/images/20230717_124646.jpg"
+              alt=""
+              class="img-responsive"
+            />
+            <img
+              src="src/images/e20543fa-24d7-4729-a942-c5933323ebf3.jpg"
+              alt=""
+              class="img-responsive"
+            />
+          </div>
+        </section>
       </main>
       <footer>
         <section class="grid grid-3-columns-w-first-narrow">
