reorganized css file, added filter and finished learn more btn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h3>.Travel.</h3>
         <h1>Welcome to Edinburgh</h1>
         <h2>Capital city of Scotland</h2>
-        <a href="more">Learn more</a>
+        <a href="#more">Learn more</a>
       </header>
       <main>
         <section class="grid grid-2-columns first-section">
@@ -27,6 +27,7 @@
               src="src/images/Edinburgh-0135.jpg"
               alt="Edimburgh view"
               class="img-responsive edimburgh-img"
+              id="more"
             />
           </div>
           <div>
